<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_homer"
        android:layout_width="0dp"
        android:layout_height="345dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="379dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="139dp"
        android:contentDescription="@string/HomerSimpson"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homer_simpson" />

    <ImageView
        android:id="@+id/animacioImg"
        android:layout_width="254dp"
        android:layout_height="184dp"
        android:layout_gravity="center"
        android:layout_marginTop="74dp"
        android:contentDescription="@string/Simspsonstitle"
        android:src="@drawable/animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_donut"
        android:layout_width="93dp"
        android:layout_height="88dp"
        android:layout_marginStart="26dp"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:layout_marginBottom="14dp"
        android:contentDescription="@string/donut"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_ull"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView_engranatgeGREEN"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/animacioImg"
        app:srcCompat="@drawable/donut" />


    <ImageView
        android:id="@+id/imageView_ull"
        android:layout_width="42dp"
        android:layout_height="77dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="423dp"
        android:layout_marginEnd="269dp"
        android:layout_marginRight="269dp"
        android:layout_marginBottom="231dp"
        android:contentDescription="@string/ull"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ull" />

    <ImageView
        android:id="@+id/imageView_engranatgeRED"
        android:layout_width="73dp"
        android:layout_height="90dp"
        android:layout_marginStart="143dp"
        android:layout_marginLeft="143dp"
        android:layout_marginTop="354dp"
        android:layout_marginEnd="226dp"
        android:layout_marginRight="226dp"
        android:layout_marginBottom="319dp"
        android:contentDescription="@string/engranatgevermell"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.656"
        app:srcCompat="@drawable/engranatge_vermell" />

    <ImageView
        android:id="@+id/imageView_engranatgeGREEN"
        android:layout_width="66dp"
        android:layout_height="69dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="381dp"
        android:layout_marginEnd="169dp"
        android:layout_marginRight="139dp"
        android:layout_marginBottom="308dp"
        android:contentDescription="@string/engranatgeverd"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_donut"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/engranatge_verd" />

    <ImageView
        android:id="@+id/imageView6_engranatgeBLUE"
        android:layout_width="88dp"
        android:layout_height="68dp"
        android:layout_marginStart="193dp"
        android:layout_marginLeft="193dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="169dp"
        android:layout_marginRight="169dp"
        android:layout_marginBottom="245dp"
        android:contentDescription="@string/engranatgeblau"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/engranatge_blau" />
</android.support.constraint.ConstraintLayout>